beta/stylesheet.css
@import url(fonts.css);
/* @import url(scss.css); */


:root {
    --gray-100: #FAFAFA;
    --gray-200: #E3E3E3;
    --gray-300: #C9C9C9;
    --gray-400: #B0B0B0;
    --gray-500: #969696;
    --gray-600: #969696;
    --gray-700: #666666;
    --gray-800: #4F4F4F;
    --gray-900: #353535;

    --primary-100: #DEF1F2;
    --primary-200: #B3EBEF;
    --primary-300: #88E1E7;
    --primary-400: #6CCED5;
    --primary-500: #42C1C9;
    --primary-600: #2F9FA7;
    --primary-700: #1D767C;
    --primary-800: #11474A;
    --primary-900: #062A2D;
}

body {
    margin: 0;
    padding: 0;
    /* background-color: var(--gray-100); */
    font-family: Lato;
    font-weight: 400;
    color: var(--gray-900);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.rectangle {
    height: 512px;
    width: 33.33%;
}

.rectangle.right {
    text-align: left;
}

.rectangle.left {
    text-align: right;
}

.iu-bg {
    background-color: #4B2724;
}

.tedx-bg {
    background-color: #4F4F4F;
}

.steps-bg {
    background-color: #0A508C;
}

.pi-bg {
    background-color: #7c420b;
}

.right {
    float: right;
    text-align: right;
}

.left {
    float: left;
    text-align: left;
}

.section {
    padding-top: 128px;
    height: 512px;

    max-width: 1300px;
    margin: 0 auto;

}

.section-hero--right {
    height: 520px;
    bottom: 64px;
    left: -8.33%;
    position: relative;
    -webkit-filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.5));
    filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.5));

    -webkit-transition: .3s ease-in-out transform;
    -moz-transition: .3s ease-in-out transform;
    -o-transition: .3s ease-in-out transform;
    transition: .3s ease-in-out transform;
}

.section-hero--left {
    height: 520px;
    position: relative;
    bottom: 64px;
    left: 8.33%;
    -webkit-filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.5));
    filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.5));

    -webkit-transition: .3s ease-in-out transform;
    -moz-transition: .3s ease-in-out transform;
    -o-transition: .3s ease-in-out transform;
    transition: .3s ease-in-out transform;

}

.section-hero--left:hover {    
    transform: translateY(-10px);    
}

.section-hero--right:hover {    
    transform: translateY(-10px);    
}

.section-info {
    width: 50%;
    position: relative;
    top: 50%;
    transform: translateY(-50%);

    line-height: 1.5rem;
    font-size: 1rem;
    font-weight: 400;
}

.section-info.right {
    padding-right: 100px;
}

.section-info.left {
    padding-left: 100px;
}

.section-title {
    font-weight: 700;
    line-height: 3.75rem;
    font-size: 3.75rem;
    margin-bottom: 16px;
}

.section-link {
    font-weight: 600;
    font-size: 0.875rem;
    letter-spacing: 0.05em;

    color: var(--primary-600);
}

.section-desc {
    margin-bottom: 16px;
}

.project-type {
    font-style: italic;
    font-weight: 500;
    font-size: 1.125rem;
    padding-bottom: 24px;
}

.profile-banner-info {
    position: absolute;
    top: 40%;
    right: 50%;
    text-align: right;
}
.info-card {
    height: 256px;
    padding-top: 64px;
    position: relative;
}
.heading {
    margin-top: 3rem;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background: -webkit-gradient(linear,left top,right top,from(#42C1C9),to(#2F9FA7));
    background: linear-gradient(to right,#42C1C9,#2F9FA7);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: 700;
    /* font-size: 2.25rem; */
    text-align: left;
}
.subheading {
    color: var(--gray-700);
    letter-spacing: 0.1em;
    border-top: #C9C9C9 1px solid;
    margin-top: 1.5rem;
    padding-top: 0.5rem;
    margin-bottom: 0.75rem;
    font-size: 1rem;
}
.separator {
    width: 100%;
    height: 4px;
    background: linear-gradient(-90deg, #2F9FA7 0%, #6CCED5 100%);
    border-radius: 2px;
    display: block;
    margin-top: 0.5rem;
    margin-bottom: 1rem;
    margin-left: auto;
    margin-right: auto;
}
.hero-shadow {
    -webkit-filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.5));
    filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.5));
}
.screenshot {
    height: 32rem;
    border-radius: 20px !important;
}
.clip-circle {
    -webkit-clip-path: circle(50% at 50% 50%);
    clip-path: circle(50% at 50% 50%);
}
.bg-gradient {
    background: linear-gradient(-90deg, #6CCED5 0%, #2F9FA7 100%);
}
.bg-dark-gradient {
    background: linear-gradient(109.57deg, #1D767C 0%, #2F9FA7 100%);
}
.bg-light {
    background-color: #2F9FA7;
}
.bg-primary-light {
    background-color: var(--primary-100) !important;
}
.bg-iu-hero {
    background-image: url(./images/iu.PNG);
    background-position: center;
    background-size: cover;
    height: 48rem;
}
.text-black {
    color: var(--gray-900);
}
.text-dark-gray {
    color: var(--gray-700);
}
.text-dark-green {
    color: var(--primary-800);
}
.text-white {
    color: var(--gray-100);
}
.text-light-green {
    color: var(--primary-200);
}
.text-link, .text-green {
    color: var(--primary-600);
}
.about-me {
    width: 50%;
    max-width: 598px;
}
.card {
    background: #FFFFFF;
    box-shadow: 0px 17px 50px rgba(0, 0, 0, 0.17);
    border-radius: 5px;
}
.image-card {
    border: 5px solid #FFFFFF;
    box-sizing: border-box;
}
.image-card-contained {
    width: 47%;
    min-width: 16rem;
    margin-bottom: 1.5rem;
}
.info-card {
    height: 256px;
    padding-top: 64px;
    position: relative;
}
.button {
    background-color: var(--primary-500);
    padding: 8px 24px;
    margin-top: 16px;
    font-size: 1.25rem;
    font-weight: 600;
    color: var(--gray-100);
    border-radius: 10px;

    -webkit-transition: .1s ease-in-out all;
    -moz-transition: .1s ease-in-out all;
    -o-transition: .1s ease-in-out all;
    transition: .1s ease-in-out all;
}

.button:hover {
    background-color: var(--primary-600);
    fill: var(--primary-600);
}

h1, h2, h3, h4, h5 {
    margin: 0;
}

p {
    margin: 0;
    line-height: 1.75;
    color: var(--gray-700);
}

b {
    font-weight: 500;
    color: var(--gray-900);
}
ul {
    padding-left: 0;
    margin: 0;
    /* padding-top: 12px; */
    list-style: none;
}
ul li {
    margin-bottom: 1rem;
    position: relative;
    padding-left: 2rem;
    line-height: 1.5;
}
ol li {
    margin-bottom: 1rem;
    line-height: 1.5;
}
li.tick:before {
    content: '';
    width: 16px;
    height: 16px;
    top: 0.25rem;
    left: 0;
    position: absolute;
    background: url(./images/bullet.svg);
    background-repeat: no-repeat;
}
li.no-bullet {
    padding-left: 0;
    margin-bottom: 0.5rem;
}
li:last-child {
    margin-bottom: 0;
}
li {
    color: var(--gray-700);
}
a {
    -webkit-transition: .2s ease-in-out border-bottom;
    -moz-transition: .2s ease-in-out border-bottom;
    -o-transition: .2s ease-in-out border-bottom;
    transition: .2s ease-in-out border-bottom;

    border-bottom: transparent 1px solid;
    text-decoration: none;
}
.no-hover-underline:hover {
    border-bottom: none !important;
}
a:hover {
    border-bottom: var(--primary-600) 1px solid;
}


@media only screen and (max-width: 992px) {
    .section-hero--left, .section-hero--right {
        height: 400px;
    }

    .rectangle {
        height: 400px;
    }

    .profile-banner-info {
        right: 45%;
    }
}

@media only screen and (max-width: 768px) {
    .header {
        padding-left: 50px;
        padding-right: 50px;
    }

    .section-info.left {
        padding-left: 50px;
    }

    .section-info.right {
        padding-right: 50px;
    }

    .section-title {
        font-size: 3rem;
        line-height: 1;
    }
    .profile-banner-info {
        top: 30%;
        right: 39%;
    }
}

@media only screen and (max-width: 568px) {
    .header {
        padding-left: 24px;
        padding-right: 24px;
        margin-top: 24px;
    }

    .profile-pic {
        height: 32px;
        width: 32px;
    }

    .header-text {
        top: -10px;
        padding-left: 8px;
        font-size: 0.875rem;
    }

    .links {
        font-size: 0.875rem;
        padding-top: 10px;
    }

    .link {
        margin-left: 24px;
    }

    .section {
        height: inherit;
    }

    .rectangle {
        height: 192px;
        width: 66.66%;
        float: inherit;
        text-align: right !important;

    }
    .profile-banner-info {
        position: relative;
        text-align: left;
        left: 0;
        margin-left: 1.5rem;
        margin-top: 1.5rem;
    }

    .section-hero--left {
        left: 33.33%;
        width: auto;
        height: 256px;
        bottom: 0;

        position: relative;
        top: 50%;
        transform: translateY(-50%);
    }

    .section-hero--right {
        left: 33.33%;
        width: auto;
        height: 256px;
        bottom: 0;

        position: relative;
        top: 50%;
        transform: translateY(-50%);
    }

    .section-hero--left:hover {    
        transform: translateY(-60%);    
    }
    
    .section-hero--right:hover {    
        transform: translateY(-60%);    
    }

    .section-info {
        float: inherit;
        text-align: left;
        transform: inherit;
        padding-left: 24px !important;
        padding-right: 24px !important;
        padding-top: 64px;
        width: auto !important;
        margin: 0 !important;
    }

    .section-title {
        font-size: 1.875rem;
        line-height: 1;
    }

    .section-desc {
        font-size: 0.875rem;
        line-height: 1.5;
    }
    .about-me {
        margin: auto !important;
        width: 90%;
    }
    .bg-iu-hero {
        height: 24rem;
    }
}

